# nicetomeetyou

./: .gitignore  README.md  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  run_local_server.sh  test_http_request.py  test_http_request_result.txt
apps/news/: admin.py  base_task.py  consumers.py  models.py  pagination.py  routing.py  serializers.py  tasks.py  urls.py  views.py
apps/news/migrations/: 0001_initial.py  0002_news_author_name_news_report_datetime_news_url.py  0003_alter_news_url.py
backend/: Dockerfile  asgi.py  manage.py  requirements.txt  routings.py  run.sh
backend/api/: models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/project/: asgi.py  settings.py  urls.py  wsgi.py
backend/tasks/: consumers.py  notifications.py  routings.py
backend/templates/: news_detail.html  news_timeline.html  notifications.html
celery/: app.py  post_data.json
core/: asgi.py  celery.py  settings.py  urls.py
crawler/: Dockerfile  __init__.py  celery_config.py  requirements.txt  tasks.py
env/: .dev-sample
frontend/: .env.development  .env.production  Dockerfile  LICENSE  README.md  components.d.ts  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
news/: models.py  pagination.py  renderer.py  urls.py  views.py
polls/: tasks.py  tests.py  urls.py  views.py
polls/templates/: form.html  form_ws.html
proxy/: nginx.conf
tests/: test_newstimeline_pf.py  test_qps.py
utils/: client.py
(+35 files in other folders)
